# imgui_presentable

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml  lint.yml  nightly.yml
derive/: Cargo.toml  README.md
derive/src/: attributes.rs  enum_impl.rs  lib.rs  struct_impl.rs
lib/: Cargo.toml  README.md
lib/src/: basic_types.rs  glam_types.rs  lib.rs  std_types.rs
lib/tests/: derive.rs
