[package]
name = "imgui_presentable_derive"
version = "0.2.1"
edition = "2021"
authors = ["Viktor Polevoi <maintainer@vpolevoy.com>"]
description = "Derive macro for ImguiPresentable."
license = "MIT"
keywords = ["imgui"]
repository = "https://github.com/vityafx/imgui_presentable"
documentation = "https://docs.rs/imgui_presentable_derive"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full", "extra-traits"] }
lazy_static = "1"
regex = "1"

[features]
default = []
egui_backend = []
imgui_backend = []

[package.metadata.docs.rs]
# To doc all features
all-features = true
