[package]
name = "imgui_presentable"
version = "0.1.1"
edition = "2021"
authors = ["Viktor Polevoi <maintainer@vpolevoy.com>"]
description = "A simple way to represent Rust types in ImGui."
license = "MIT"
keywords = ["imgui"]
repository = "https://github.com/vityafx/imgui_presentable"
documentation = "https://docs.rs/imgui_presentable"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#imgui_presentable_derive = { path = "../derive" }
imgui_presentable_derive = { version = "0.1" }
imgui = { version = "0.11", features = ["tables-api", "docking"] }
glam = { version = "0.24", optional = true }

[features]
default = ["glam"]
