[package]
name = "imgui_presentable"
version = "0.2.1"
edition = "2021"
authors = ["Viktor Polevoi <maintainer@vpolevoy.com>"]
description = "A simple way to represent Rust types in ImGui."
license = "MIT"
keywords = ["imgui"]
repository = "https://github.com/vityafx/imgui_presentable"
documentation = "https://docs.rs/imgui_presentable"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# imgui_presentable_derive = { path = "../derive" }
imgui_presentable_derive = { version = "0.2" }
imgui = { version = "0.11", features = ["tables-api", "docking"], optional = true }
egui = { version = "0.23", optional = true }
# Just for the tables.
egui_extras = { version = "0.23", optional = true }
glam = { version = "0.24", optional = true }

[features]
default = ["glam", "imgui_backend"]
imgui_backend = ["imgui_presentable_derive/imgui_backend", "imgui"]
egui_backend = ["imgui_presentable_derive/egui_backend", "egui", "egui_extras"]

[package.metadata.docs.rs]
# To doc all features
all-features = true
